--- a/frequently-asked-questions/index.html
+++ b/frequently-asked-questions/index.html
@@ -2,19 +2,20 @@
 layout: page
 ---
 
-{% assign index = site.data.api-commons.faq %}
+{% assign index = site.data.api-commons.frequently-asked-questions %}
 {% assign apifaq = index[0] %}
 
 <h1>{{ apifaq.title }}</h1>
 <p><img src="{{ apifaq.image }}" align="right" width="75" style="padding: 5px;" /></p>
 <p>{{ apifaq.header }}</p>
-{% for categories in apifaq.categories %}
-	<h3>{{ categories.category }}</h3>
+{% for entry in apifaq.categories %}
+	<h3>{{ entry.category }}</h3>
 	<ul>
-	{% for questions in categories.questions %}
-		{% assign slug = questions.question | replace: ' ','-' %}
-		{% assign slug = questions.question | replace: '?','' %}
-		{% assign slug = questions.question | replace: ':','-' %}
+	{% for questions in entry.questions %}
+		{% assign slug = questions.question %}
+		{% assign slug = slug | replace: ' ','-' %}
+		{% assign slug = slug | replace: '?','' %}
+		{% assign slug = slug | replace: ':','-' %}
 		{% assign slug = slug | downcase %}
 		<li><a name="{{ slug }}">{{ questions.question }}</a> - {{ questions.answer }}</li>
 	{% endfor %}
