--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ layout: page
         {% if authentication_url != '' %}
 				<tr id="x-authentication-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="x-authentication-img-url"><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/building-blocks/bw-authentication.png" width="35" /></a></td>
-					<td><a href="" id="x-authentication-url">Authentication</a><div id="d-authentication"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ authentication_url }}" id="x-authentication-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-key-circle.png" width="35" /></a></td>
+					<td><a href="{{ authentication_url }}" id="x-authentication-url">Authentication</a><div id="d-authentication"></div></td>
 				</tr>
         {% endif %}
         {% if faq_url != '' %}
@@ -385,10 +385,10 @@ layout: page
                                   {% if tag == grouptag %}
                                     <li style="font-size: 12px;">
                                       {{ summary }}
-                                      {% if verb == 'GET' %}1<span style="color:#009900; font-weight: bold;">{% endif %}
-                                      {% if verb == 'POST' %}2<span style="color:#0000FF font-weight: bold;">{% endif %}
-                                      {% if verb == 'PUT' %}3<span style="color:#FF0080 font-weight: bold;">{% endif %}
-                                      {% if verb == 'DELETE' %}4<span style="color:#FF9900 font-weight: bold;">{% endif %}
+                                      {% if verb == 'GET' %}1)<span style="color:#009900; font-weight: bold;">{% endif %}
+                                      {% if verb == 'POST' %}2)<span style="color:#0000FF font-weight: bold;">{% endif %}
+                                      {% if verb == 'PUT' %}3)<span style="color:#FF0080 font-weight: bold;">{% endif %}
+                                      {% if verb == 'DELETE' %}4)<span style="color:#FF9900 font-weight: bold;">{% endif %}
                                       {{ verb }}
                                     </span>
                                     </li>
