--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@ layout: page
         {% if signup_url != '' %}
 				<tr id="x-signup-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="x-signup-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-signup.png" width="35" /></a></td>
-					<td><a href="" id="x-signup-url">Signup</a><div id="d-signup"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ signup_url }}" id="x-signup-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/building-blocks/x-signup.png" width="35" /></a></td>
+					<td><a href="{{ signup_url }}" id="x-signup-url">Signup</a><div id="d-signup"></div></td>
 				</tr>
         {% endif %}
         {% if login_url != '' %}
@@ -204,8 +204,8 @@ layout: page
         {% if code_url != '' %}
 				<tr id="x-code-row">
 					<td width="25" style="height: 55px;"></td>
-					<td width="75" align="center" valign="middle"><a href="" id="x-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
-					<td><a href="" id="x-code-url">Code</a><div id="d-code"></div></td>
+					<td width="75" align="center" valign="middle"><a href="{{ code_url }}" id="x-code-img-url"><img src="https://s3.amazonaws.com/kinlane-productions/bw-icons/bw-code.png" width="35" /></a></td>
+					<td><a href="{{ code_url }}" id="x-code-url">Code</a><div id="d-code"></div></td>
 				</tr>
         {% endif %}
         {% if plan_url != '' %}
