--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,8 +1,216 @@
 ---
 layout: page
-title: Documentation
 ---
+<script type="text/javascript">
+  function showme($id)
+    {
+    if(document.getElementById($id).style.display=='none')
+      {
+      document.getElementById($id).style.display = '';
+      }
+    else
+      {
+      document.getElementById($id).style.display = 'none';
+      }
+    }
+</script>
+<table cellpadding="3" cellspacing="2" width="100%" border="1" style="margin-top: 0px;">
 
-<p>My documentation, generated across all of the API indexed via the local <a href="/master/apis.json">APIs.json file</a>.</p>
+{% assign index = site.data.apis %}
+{% assign apijson = index[0] %}
+{% assign contents = site.data.api-commons %}
+{% assign apicommons = contents %}
 
-<div id="master-swagger-section"></div>
+{% assign blog_url = '' %}
+{% assign blogrss_url = '' %}
+{% assign portal_url = '' %}
+{% assign gitub_url = '' %}
+{% assign twitter_url = '' %}
+{% assign website_url = '' %}
+
+{% for common in apijson.x-common %}
+
+  {% if common.type == 'x-getting-started' %}
+    {% assign getting_started_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-authentication-overview' %}
+    {% assign authentication_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-faq' %}
+    {% assign faq_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-login' %}
+    {% assign login_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-selfservice-registration' %}
+    {% assign signup_url = common.url %}
+  {% endif %}
+
+  {% if common.type == 'x-code-page' %}
+    {% assign code_page_url = common.url %}
+  {% endif %}
+
+  {% if common.type == 'x-road-map' %}
+    {% assign road_map_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-issue' %}
+    {% assign issue_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-change-log' %}
+    {% assign change_log_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-status' %}
+    {% assign status_dashboard_url = common.url %}
+  {% endif %}
+
+  {% if common.type == 'x-support' %}
+    {% assign support_url = common.url %}
+  {% endif %}
+
+  {% if common.type == 'x-api-plan' %}
+    {% assign api_plan_url = common.url %}
+  {% endif %}
+  {% if common.type == 'x-rate-limit' %}
+    {% assign rate_limit_url = common.url %}
+  {% endif %}
+
+{% endfor %}
+
+  <tr>
+    <td style="padding-bottom: 10px;">
+      {% if apijson.image != null %}
+        <a href="{{ site.url }}/apis.json">
+          <img src="{{ apijson.image }}" align="left" style="padding: 5px;" width="125" />
+        </a>
+      {% endif %}
+      <a href="{{ site.url }}" style="font-size: 22px;"><strong>{{ apijson.name }}</strong></a><br />
+      {{ apijson.description }}
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <table width="100%" border="1">
+        <tr>
+        <td align="center" style="margin-left: 90px; margin-right: 90px;">
+
+            {% assign api_action_url = '' %}
+            {% assign numberofapis = apijson.apis | size %}
+
+                {% assign api_action_url = '' %}
+                {% for api in apijson.apis %}
+
+                <table cellpadding="3" cellspacing="2" width="100%" border="0">
+
+                    {% assign api_action_spec = '' %}
+                    {% assign api_action_url = '' %}
+                    {% assign openapi_spec_json = '' %}
+
+                    {% for property in api.properties %}
+
+                      {% assign thisname = apijson.name | downcase %}
+                      {% assign thisname = thisname | append:'/' %}
+                      {% assign thisname = thisname | replace: ' ','-' %}
+
+                      {% if property.type == 'x-openapi-spec' %}
+
+                        {% assign openapi_spec_url = property.url %}
+                        {% assign pathname = openapi_spec_url | replace: '_data/api-commons/','' %}
+                        {% assign pathname = pathname | replace: '.yaml','' %}
+                        {% assign pathname = pathname | replace: '/','.' %}
+
+                        {% for entry in apicommons %}
+                          {% assign thisname = entry[0] %}
+                          {% assign thisentry = entry[1] %}
+                          {% if thisname == pathname %}
+                            {% assign openapi_spec_json = thisentry %}
+                          {% endif %}
+                        {% endfor %}
+                      {% endif %}
+
+                      {% if property.type == 'x-postman %}
+                        {% assign postman_url = property.url %}
+                      {% endif %}
+
+                      {% if property.type == 'x-api-blueprint' %}
+                        {% assign api_blueprint_url = property.url %}
+                      {% endif %}
+
+                      {% if property.type == 'x-api-actions' %}
+                        {% assign api_action_url = property.url %}
+                      {% endif %}
+
+                    {% endfor %}
+
+                    <tr>
+                      <td align="left">
+                        <p style="font-size: 18px;"><strong>{{ api.name }}</strong></p>
+                      </td>
+                      <td align="right">
+                        (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Documentation" style="font-size: 11px; padding: 3px;">Documentation</a>)
+                        {% if openapi_spec_url != null and openapi_spec_url != empty %}
+                          (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px; padding: 3px;">OpenAPI Spec</a>)
+                        {% endif %}
+                      </td>
+                    </tr>
+                    <tr id="methods-for-{{ pathname }}">
+                      <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
+                        <ul>
+
+                          {% assign taglist = '' %}
+                          {% for spec in openapi_spec_json %}
+                            {% for path in spec.paths %}
+                              {% assign method_json = path[1] %}
+                              {% for method in method_json %}
+                                {% assign tagarray = method[1].tags %}
+                                {% assign tag = tagarray[0] %}
+                                {% if taglist contains tag %}
+                                {% else %}
+                                  {% assign taglist = taglist | append:',' %}
+                                  {% assign taglist = taglist | append:tag %}
+                                {% endif %}
+                              {% endfor %}
+                            {% endfor %}
+                          {% endfor %}
+
+                          {% assign tagArray = taglist | split: "," %}
+                          {% for grouptag in tagArray %}
+
+                            <li style="font-size: 12px; margin-left: 25px;"><strong>{{ grouptag }}</strong></li><ul>
+
+                            {% for spec in openapi_spec_json %}
+                              {% for path in spec.paths %}
+                                {% assign method_json = path[1] %}
+                                {% for method in method_json %}
+
+                                  {% assign tagarray = method[1].tags %}
+                                  {% assign tag = tagarray[0] %}
+
+                                  {% assign verb = method[0] | upcase %}
+                                  {% assign summary = method[1].summary %}
+
+                                  {% if tag == grouptag %}
+                                    <li style="font-size: 12px;">
+                                      {{ summary }}
+                                      {% if verb == 'GET' %}(<span style="color:#009900; font-weight:bold;">GET</span>){% endif %}
+                                      {% if verb == 'POST' %}(<span style="color:#0000ff; font-weight:bold;">POST</span>){% endif %}
+                                      {% if verb == 'PUT' %}(<span style="color:#FF0080; font-weight:bold;">PUT</span>){% endif %}
+                                      {% if verb == 'DELETE' %}(<span style="color:#FF9900; font-weight:bold;">DELETE</span>){% endif %}
+                                    </li>
+                                  {% endif %}
+
+                                {% endfor %}
+                              {% endfor %}
+                            {% endfor %}
+                            </ul></li>
+                          {% endfor %}
+                        </ul>
+                      </td>
+                    </tr>
+                  </table>
+                {% endfor %}
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
