--- a/documentation/index.html
+++ b/documentation/index.html
@@ -46,6 +46,10 @@ layout: page
     {% assign signup_url = common.url %}
   {% endif %}
 
+  {% if common.type == 'x-documentation' %}
+    {% assign documentation_url = common.url %}
+  {% endif %}
+
   {% if common.type == 'x-code-page' %}
     {% assign code_page_url = common.url %}
   {% endif %}
@@ -146,7 +150,7 @@ layout: page
                         <p style="font-size: 18px;"><strong>{{ api.name }}</strong></p>
                       </td>
                       <td align="right">
-                        (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/docs/" target="_blank" title="View Documentation" style="font-size: 11px; padding: 3px;">Documentation</a>)
+                        (<a href="http://{{ site.org }}.github.io/{{ site.repo }}/{{ documentation_url }}/" target="_blank" title="View Documentation" style="font-size: 11px; padding: 3px;">Documentation</a>)
                         {% if openapi_spec_url != null and openapi_spec_url != empty %}
                           (<a href="{{ openapi_spec_url }}" target="_blank" title="View OpenAPI Spec" style="font-size: 11px; padding: 3px;">OpenAPI Spec</a>)
                         {% endif %}
