--- a/documentation/index.html
+++ b/documentation/index.html
@@ -158,7 +158,7 @@ layout: page
                     </tr>
                     <tr id="methods-for-{{ pathname }}">
                       <td colspan="2" align="left" style="margin-left: 25px; margin-right: 25px;">
-                        <ul>
+                        <table width="100%">
 
                           {% assign taglist = '' %}
                           {% for spec in openapi_spec_json %}
@@ -179,7 +179,9 @@ layout: page
                           {% assign tagArray = taglist | split: "," %}
                           {% for grouptag in tagArray %}
 
-                            <li style="font-size: 12px; margin-left: 25px;"><strong>{{ grouptag }}</strong></li><ul>
+                            <tr>
+                              <td><strong>{{ grouptag }}</strong></td>
+                            </tr>
 
                             {% for spec in openapi_spec_json %}
                               {% for path in spec.paths %}
@@ -193,21 +195,24 @@ layout: page
                                   {% assign summary = method[1].summary %}
 
                                   {% if tag == grouptag %}
-                                    <li style="font-size: 12px;">
-                                      {{ summary }}
-                                      {% if verb == 'GET' %}(<span style="color:#009900; font-weight:bold;">GET</span>){% endif %}
-                                      {% if verb == 'POST' %}(<span style="color:#0000ff; font-weight:bold;">POST</span>){% endif %}
-                                      {% if verb == 'PUT' %}(<span style="color:#FF0080; font-weight:bold;">PUT</span>){% endif %}
-                                      {% if verb == 'DELETE' %}(<span style="color:#FF9900; font-weight:bold;">DELETE</span>){% endif %}
-                                    </li>
+                                    <tr>
+                                      <td><strong>{{ path[0] }}</strong></td>
+                                      <td><strong>{{ summary }}</strong></td>
+                                      <td>
+                                        {% if verb == 'GET' %}(<span style="color:#009900; font-weight:bold;">GET</span>){% endif %}
+                                        {% if verb == 'POST' %}(<span style="color:#0000ff; font-weight:bold;">POST</span>){% endif %}
+                                        {% if verb == 'PUT' %}(<span style="color:#FF0080; font-weight:bold;">PUT</span>){% endif %}
+                                        {% if verb == 'DELETE' %}(<span style="color:#FF9900; font-weight:bold;">DELETE</span>){% endif %}
+                                      </td>
+                                    </tr>
                                   {% endif %}
 
                                 {% endfor %}
                               {% endfor %}
                             {% endfor %}
-                            </ul></li>
+                            <tr><td><hr /></td></tr>
                           {% endfor %}
-                        </ul>
+                        </table>
                       </td>
                     </tr>
                   </table>
